# AROF/agent/python-flask-server/swagger_server/models/__init__.py
@@ -3,5 +3,4 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.operations import Operations
-from swagger_server.models.operations_inner import OperationsInner
+from swagger_server.models.operation import Operation
