# AROF/agent/python-flask-server/swagger_server/models/operation.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Operation(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, arof_id: int=None, enable: bool=None):  # noqa: E501
+        """Operation - a model defined in Swagger
+
+        :param arof_id: The arof_id of this Operation.  # noqa: E501
+        :type arof_id: int
+        :param enable: The enable of this Operation.  # noqa: E501
+        :type enable: bool
+        """
+        self.swagger_types = {
+            'arof_id': int,
+            'enable': bool
+        }
+
+        self.attribute_map = {
+            'arof_id': 'arof_id',
+            'enable': 'enable'
+        }
+
+        self._arof_id = arof_id
+        self._enable = enable
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Operation':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Operation of this Operation.  # noqa: E501
+        :rtype: Operation
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def arof_id(self) -> int:
+        """Gets the arof_id of this Operation.
+
+
+        :return: The arof_id of this Operation.
+        :rtype: int
+        """
+        return self._arof_id
+
+    @arof_id.setter
+    def arof_id(self, arof_id: int):
+        """Sets the arof_id of this Operation.
+
+
+        :param arof_id: The arof_id of this Operation.
+        :type arof_id: int
+        """
+
+        self._arof_id = arof_id
+
+    @property
+    def enable(self) -> bool:
+        """Gets the enable of this Operation.
+
+
+        :return: The enable of this Operation.
+        :rtype: bool
+        """
+        return self._enable
+
+    @enable.setter
+    def enable(self, enable: bool):
+        """Sets the enable of this Operation.
+
+
+        :param enable: The enable of this Operation.
+        :type enable: bool
+        """
+
+        self._enable = enable
