# AROF/agent/python-flask-server/swagger_server/models/operations_inner.py
@@ -1,90 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class OperationsInner(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, arof_id: int=None, laser_enable: bool=None):  # noqa: E501
-        """OperationsInner - a model defined in Swagger
-
-        :param arof_id: The arof_id of this OperationsInner.  # noqa: E501
-        :type arof_id: int
-        :param laser_enable: The laser_enable of this OperationsInner.  # noqa: E501
-        :type laser_enable: bool
-        """
-        self.swagger_types = {
-            'arof_id': int,
-            'laser_enable': bool
-        }
-
-        self.attribute_map = {
-            'arof_id': 'arof_id',
-            'laser_enable': 'laser_enable'
-        }
-
-        self._arof_id = arof_id
-        self._laser_enable = laser_enable
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'OperationsInner':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The operations_inner of this OperationsInner.  # noqa: E501
-        :rtype: OperationsInner
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def arof_id(self) -> int:
-        """Gets the arof_id of this OperationsInner.
-
-
-        :return: The arof_id of this OperationsInner.
-        :rtype: int
-        """
-        return self._arof_id
-
-    @arof_id.setter
-    def arof_id(self, arof_id: int):
-        """Sets the arof_id of this OperationsInner.
-
-
-        :param arof_id: The arof_id of this OperationsInner.
-        :type arof_id: int
-        """
-
-        self._arof_id = arof_id
-
-    @property
-    def laser_enable(self) -> bool:
-        """Gets the laser_enable of this OperationsInner.
-
-
-        :return: The laser_enable of this OperationsInner.
-        :rtype: bool
-        """
-        return self._laser_enable
-
-    @laser_enable.setter
-    def laser_enable(self, laser_enable: bool):
-        """Sets the laser_enable of this OperationsInner.
-
-
-        :param laser_enable: The laser_enable of this OperationsInner.
-        :type laser_enable: bool
-        """
-
-        self._laser_enable = laser_enable
